jxc/src/jxc_lexer_gen.re.cpp
/* Generated by re2c 4.5.1 on Tue Aug  4 17:47:56 2026 */
#line 1 "jxc/src/jxc_lexer_gen.re"
#include "jxc/jxc_lexer.h"


#define YYCTYPE  uint8_t
#define YYCURSOR this->current
#define YYMARKER this->marker


#line 69 "jxc/src/jxc_lexer_gen.re"



JXC_BEGIN_NAMESPACE(jxc)

TokenType Lexer::expr_next(ErrorInfo& out_error, size_t& out_start_idx, size_t& out_end_idx, std::string_view& out_token_value, std::string_view& out_string_delim, bool expr_only_mode)
{
    JXC_DEBUG_ASSERT(expr_only_mode || expr_paren_depth > 0);
    JXC_DEBUG_ASSERT(angle_bracket_depth == 0);

    auto set_token = [&]()
    {
        this->get_token_pos(out_start_idx, out_end_idx);
        out_token_value = std::string_view{ (char*)this->token_start, static_cast<size_t>(this->current - this->token_start) };
    };

    auto set_error_msg = [&](std::string&& err)
    {
        this->get_token_pos(out_start_idx, out_end_idx);
        out_error = ErrorInfo(std::move(err), out_start_idx, out_end_idx);
    };

    auto set_error = [&]()
    {
        // assumes out_error.message was already set
        JXC_DEBUG_ASSERT(out_error.message.size() > 0);
        this->get_token_pos(out_start_idx, out_end_idx);
        out_error.is_err = true;
        out_error.buffer_start_idx = out_start_idx;
        out_error.buffer_end_idx = out_end_idx;
    };

expr_start:
    if (this->current >= this->limit)
    {
        goto expr_end_of_stream;
    }
    this->token_start = this->current;

    
#line 53 "jxc/src/jxc_lexer_gen.re.cpp"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *this->current;
	switch (yych) {
		case '\t':
		case ' ': goto yy2;
		case '\n':
		case '\r': goto yy4;
		case '!': goto yy6;
		case '"':
		case '\'': goto yy7;
		case '#': goto yy8;
		case '$':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'c':
		case 'e':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 's':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy9;
		case '%': goto yy12;
		case '&': goto yy13;
		case '(': goto yy14;
		case ')': goto yy15;
		case '*': goto yy16;
		case '+': goto yy17;
		case ',': goto yy18;
		case '-': goto yy19;
		case '.': goto yy20;
		case '/': goto yy21;
		case '0': goto yy22;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy24;
		case ':': goto yy25;
		case ';': goto yy26;
		case '<': goto yy27;
		case '=': goto yy28;
		case '>': goto yy29;
		case '?': goto yy30;
		case '@': goto yy31;
		case '[': goto yy32;
		case '\\': goto yy33;
		case ']': goto yy34;
		case '^': goto yy35;
		case '`': goto yy36;
		case 'b': goto yy37;
		case 'd': goto yy38;
		case 'f': goto yy39;
		case 'i': goto yy40;
		case 'n': goto yy41;
		case 'r': goto yy42;
		case 't': goto yy43;
		case '{': goto yy44;
		case '|': goto yy45;
		case '}': goto yy46;
		case '~': goto yy47;
		default: goto yy1;
	}
yy1:
	++this->current;
#line 173 "jxc/src/jxc_lexer_gen.re"
	{
        if (this->current >= this->limit)
        {
            goto expr_end_of_stream;
        }
        else
        {
            set_error_msg("Invalid syntax while parsing expression");
            return TokenType::Invalid;
        }
    }
#line 173 "jxc/src/jxc_lexer_gen.re.cpp"
yy2:
	yych = *++this->current;
	switch (yych) {
		case '\t':
		case ' ': goto yy2;
		default: goto yy3;
	}
yy3:
#line 170 "jxc/src/jxc_lexer_gen.re"
	{ goto expr_start; }
#line 184 "jxc/src/jxc_lexer_gen.re.cpp"
yy4:
	yyaccept = 0;
	yych = *(this->marker = ++this->current);
	switch (yych) {
		case '\t':
		case ' ': goto yy48;
		case '\n':
		case '\r': goto yy4;
		default: goto yy5;
	}
yy5:
#line 171 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::LineBreak; }
#line 198 "jxc/src/jxc_lexer_gen.re.cpp"
yy6:
	++this->current;
#line 143 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::ExclamationPoint; }
#line 203 "jxc/src/jxc_lexer_gen.re.cpp"
yy7:
	++this->current;
#line 165 "jxc/src/jxc_lexer_gen.re"
	{ if (scan_string(out_error.message, this->current[-1], out_token_value)) { get_token_pos(out_start_idx, out_end_idx); return TokenType::String; } else { set_error(); return TokenType::Invalid; } }
#line 208 "jxc/src/jxc_lexer_gen.re.cpp"
yy8:
	++this->current;
#line 125 "jxc/src/jxc_lexer_gen.re"
	{ scan_comment(1, out_token_value); get_token_pos(out_start_idx, out_end_idx); return TokenType::Comment; }
#line 213 "jxc/src/jxc_lexer_gen.re.cpp"
yy9:
	yych = *++this->current;
yy10:
	switch (yych) {
		case '$':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy9;
		default: goto yy11;
	}
yy11:
#line 168 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Identifier; }
#line 287 "jxc/src/jxc_lexer_gen.re.cpp"
yy12:
	++this->current;
#line 150 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Percent; }
#line 292 "jxc/src/jxc_lexer_gen.re.cpp"
yy13:
	++this->current;
#line 142 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Ampersand; }
#line 297 "jxc/src/jxc_lexer_gen.re.cpp"
yy14:
	++this->current;
#line 113 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); ++expr_paren_depth; return TokenType::ParenOpen; }
#line 302 "jxc/src/jxc_lexer_gen.re.cpp"
yy15:
	++this->current;
#line 114 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); --expr_paren_depth; if (expr_paren_depth < 0) { set_error_msg("Unexpected symbol `)` in expression"); return TokenType::Invalid; } else { return TokenType::ParenClose; } }
#line 307 "jxc/src/jxc_lexer_gen.re.cpp"
yy16:
	++this->current;
#line 147 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Asterisk; }
#line 312 "jxc/src/jxc_lexer_gen.re.cpp"
yy17:
	++this->current;
#line 145 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Plus; }
#line 317 "jxc/src/jxc_lexer_gen.re.cpp"
yy18:
	++this->current;
#line 138 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Comma; }
#line 322 "jxc/src/jxc_lexer_gen.re.cpp"
yy19:
	++this->current;
#line 146 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Minus; }
#line 327 "jxc/src/jxc_lexer_gen.re.cpp"
yy20:
	++this->current;
#line 152 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Period; }
#line 332 "jxc/src/jxc_lexer_gen.re.cpp"
yy21:
	++this->current;
#line 148 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Slash; }
#line 337 "jxc/src/jxc_lexer_gen.re.cpp"
yy22:
	yyaccept = 1;
	yych = *(this->marker = ++this->current);
	switch (yych) {
		case '%':
		case '_': goto yy50;
		case '.': goto yy51;
		case 'E':
		case 'e': goto yy52;
		case 'b': goto yy53;
		case 'o': goto yy54;
		case 'x': goto yy55;
		default: goto yy23;
	}
yy23:
#line 128 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Number; }
#line 355 "jxc/src/jxc_lexer_gen.re.cpp"
yy24:
	yyaccept = 1;
	yych = *(this->marker = ++this->current);
	switch (yych) {
		case '%':
		case '_': goto yy50;
		case '.': goto yy51;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy24;
		case 'E':
		case 'e': goto yy52;
		default: goto yy23;
	}
yy25:
	++this->current;
#line 139 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Colon; }
#line 381 "jxc/src/jxc_lexer_gen.re.cpp"
yy26:
	++this->current;
#line 158 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Semicolon; }
#line 386 "jxc/src/jxc_lexer_gen.re.cpp"
yy27:
	++this->current;
#line 155 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::AngleBracketOpen; }
#line 391 "jxc/src/jxc_lexer_gen.re.cpp"
yy28:
	++this->current;
#line 144 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Equals; }
#line 396 "jxc/src/jxc_lexer_gen.re.cpp"
yy29:
	++this->current;
#line 156 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::AngleBracketClose; }
#line 401 "jxc/src/jxc_lexer_gen.re.cpp"
yy30:
	++this->current;
#line 153 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::QuestionMark; }
#line 406 "jxc/src/jxc_lexer_gen.re.cpp"
yy31:
	++this->current;
#line 140 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::AtSymbol; }
#line 411 "jxc/src/jxc_lexer_gen.re.cpp"
yy32:
	++this->current;
#line 117 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); ++expr_bracket_depth; return TokenType::SquareBracketOpen; }
#line 416 "jxc/src/jxc_lexer_gen.re.cpp"
yy33:
	++this->current;
#line 149 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Backslash; }
#line 421 "jxc/src/jxc_lexer_gen.re.cpp"
yy34:
	++this->current;
#line 118 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); --expr_bracket_depth; if (expr_bracket_depth < 0) { set_error_msg("Unexpected symbol `]` in expression"); return TokenType::Invalid; } else { return TokenType::SquareBracketClose; } }
#line 426 "jxc/src/jxc_lexer_gen.re.cpp"
yy35:
	++this->current;
#line 151 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Caret; }
#line 431 "jxc/src/jxc_lexer_gen.re.cpp"
yy36:
	++this->current;
#line 157 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Backtick; }
#line 436 "jxc/src/jxc_lexer_gen.re.cpp"
yy37:
	yych = *++this->current;
	switch (yych) {
		case '6': goto yy56;
		default: goto yy10;
	}
yy38:
	yych = *++this->current;
	switch (yych) {
		case 't': goto yy57;
		default: goto yy10;
	}
yy39:
	yych = *++this->current;
	switch (yych) {
		case 'a': goto yy58;
		default: goto yy10;
	}
yy40:
	yych = *++this->current;
	switch (yych) {
		case 'n': goto yy59;
		default: goto yy10;
	}
yy41:
	yych = *++this->current;
	switch (yych) {
		case 'a': goto yy60;
		case 'u': goto yy61;
		default: goto yy10;
	}
yy42:
	yych = *++this->current;
	switch (yych) {
		case '"':
		case '\'': goto yy62;
		default: goto yy10;
	}
yy43:
	yych = *++this->current;
	switch (yych) {
		case 'r': goto yy63;
		default: goto yy10;
	}
yy44:
	++this->current;
#line 121 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); ++expr_brace_depth; return TokenType::BraceOpen; }
#line 485 "jxc/src/jxc_lexer_gen.re.cpp"
yy45:
	++this->current;
#line 141 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Pipe; }
#line 490 "jxc/src/jxc_lexer_gen.re.cpp"
yy46:
	++this->current;
#line 122 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); --expr_brace_depth; if (expr_brace_depth < 0) { set_error_msg("Unexpected symbol `}` in expression"); return TokenType::Invalid; } else { return TokenType::BraceClose; } }
#line 495 "jxc/src/jxc_lexer_gen.re.cpp"
yy47:
	++this->current;
#line 154 "jxc/src/jxc_lexer_gen.re"
	{ set_token(); return TokenType::Tilde; }
#line 500 "jxc/src/jxc_lexer_gen.re.cpp"
yy48:
	yych = *++this->current;
	switch (yych) {
		case '\t':
		case ' ': goto yy48;
		case '\n':
		case '\r': goto yy4;
		default: goto yy49;
	}
yy49:
	this->current = this->marker;
	switch (yyaccept) {
		case 0: goto yy5;
		case 1: goto yy23;
		default: goto yy73;
	}
yy50:
	yych = *++this->current;
	switch (yych) {
		case '%':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy64;
		default: goto yy23;
	}
yy51:
	yych = *++this->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy65;
		default: goto yy49;
	}
yy52:
	yych = *++this->current;
	switch (yych) {
		case '+':
		case '-': goto yy66;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy67;
		default: goto yy49;
	}
yy53:
	yych = *++this->current;
	switch (yych) {
		case '0':
		case '1': goto yy68;
		default: goto yy49;
	}
yy54:
	yych = *++this->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7': goto yy69;
		default: goto yy49;
	}
yy55:
	yych = *++this->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f': goto yy70;
		default: goto yy49;
	}
yy56:
	yych = *++this->current;
	switch (yych) {
		case '4': goto yy71;
		default: goto yy10;
	}
yy57:
	yych = *++this->current;
	switch (yych) {
		case '"': goto yy72;
		case '\'': goto yy74;
		default: goto yy10;
	}
yy58:
	yych = *++this->current;
	switch (yych) {
		case 'l': goto yy75;
		default: goto yy10;
	}
yy59:
	yych = *++this->current;
	switch (yych) {
		case 'f': goto yy76;
		default: goto yy10;
	}
yy60:
	yych = *++this->current;
	switch (yych) {
		case 'n': goto yy78;
		default: goto yy10;
	}
yy61:
	yych = *++this->current;
	switch (yych) {
		case 'l': goto yy80;
		default: goto yy10;
	}
yy62:
	++this->current;
#line 161 "jxc/src/jxc_lexer_gen.re"
	{ if (scan_raw_string(out_error.message, this->current[-1], out_token_value, out_string_delim)) { get_token_pos(out_start_idx, out_end_idx); return TokenType::String; } else { set_error(); return TokenType::Invalid; } }
#line 706 "jxc/src/jxc_lexer_gen.re.cpp"
yy63:
	yych = *++this->current;
	switch (yych) {
		case 'u': goto yy81;
		default: goto yy10;
	}
yy64:
	yych = *++this->current;
	switch (yych) {
		case '%':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy82;
		default: goto yy23;
	}
yy65:
	yyaccept = 1;
	yych = *(this->marker = ++this->current);
	switch (yych) {
		case '%':
		case '_': goto yy50;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy65;
		case 'E':
		case 'e': goto yy52;
		default: goto yy23;
	}
yy66:
	yych = *++this->current;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy67;
		default: goto yy49;
	}
yy67:
	yych = *++this->current;
	switch (yych) {
		case '%':
		case '_': goto yy50;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy67;
		default: goto yy23;
	}
yy68:
	yych = *++this->current;
	switch (yych) {
		case '%':
		case '_': goto yy50;
		case '0':
		case '1': goto yy68;
		default: goto yy23;
	}
yy69:
	yych = *++this->current;
	switch (yych) {
		case '%':
